# rustry-huff-template

./: Cargo.toml
src/: simple_store.rs
src/contracts/: simple_store.huff
